--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Werror -ggdb -fsanitize=address")
+set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -Werror -ggdb  -fsanitize=address")
+# -pg (for debug)
 
 
 
