--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
     "backColor": [
-        40,
-        49,
-        60
+        0,
+        0,
+        0
     ],
     "lineColor": [
-        255,
-        255,
-        255
+        93,
+        105,
+        55
     ],
     "lineType": 0,
-    "lineWidth": 0,
+    "lineWidth": 0.800000011920929,
     "perspective": 0,
     "pointColor": [
         55,
-        103,
+        95,
         105
     ],
-    "pointSize": 8,
-    "pointType": 0
+    "pointSize": 4,
+    "pointType": 1
 }
