--- a/config.json
+++ b/config.json
@@ -10,13 +10,13 @@
         55
     ],
     "lineType": 0,
-    "lineWidth": 0.800000011920929,
+    "lineWidth": 0,
     "perspective": 0,
     "pointColor": [
         55,
         95,
         105
     ],
-    "pointSize": 4,
+    "pointSize": 3,
     "pointType": 1
 }
